<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/about_preference_category_key"
        android:title="@string/about_capitalized" >
        <Preference
            android:key="@string/open_source_licenses_preference_key"
            android:summary="@string/open_source_licenses_description"
            android:title="@string/open_source_licenses" />
        <Preference
            android:key="@string/terms_of_service_preference_key"
            android:title="@string/terms_of_service" />
        <Preference
            android:key="@string/privacy_policy_preference_key"
            android:title="@string/privacy_policy" />
        <Preference
            android:key="@string/usage_policy_preference_key"
            android:summary="@string/usage_policy_description"
            android:title="@string/usage_policy" />
        <Preference android:key="@string/version_preference_key" />
    </PreferenceCategory>

</PreferenceScreen>